release: bump version to 0.2.0 and update changelog